--- a/words_discoverer_chrome/manifest.json
+++ b/words_discoverer_chrome/manifest.json
@@ -13,6 +13,7 @@
   },
   "author": "Dmitry Ignatovich",
   "permissions": [
+    "tabs",
     "activeTab",
     "storage",
     "unlimitedStorage",
